--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+asgiref==3.6.0
 Django==4.2.4
+certifi==2024.8.30
+charset-normalizer==3.4.0
+django-environ==0.11.2
 django_multiselectfield==0.1.12
-psycopg2-binary==2.9.9
-whitenoise==6.7.0
+psycopg2-binary==2.9.10
+requests==2.31.0
+urllib3==1.26.16
+whitenoise==6.4.0
 #django-storages==1.14.3
 #azure-storage-blob==12.20.0
 pillow==10.4.0
 django-cors-headers==4.4.0
+gunicorn==20.1.0
+dj-database-url==2.3.0
